# Earl

./: .gitignore  .gitmodules  CMakeLists.txt
source/: Convolution.cpp  Convolution.h  Doubler.cpp  Doubler.h  FileBrowser.cpp  FileBrowser.h  ImpulseResponse.cpp  ImpulseResponse.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  WaveformDisplay.cpp  WaveformDisplay.h
